# Rusty-Web-Resume

./: .gitignore  Cargo.toml  README.md  Trunk.toml  default.html  index.html  nightly_rustfmt.toml  rustfmt.toml
config/: resume.toml
config/styles/: default.css
data/: resume.toml
src/: lib.rs  main.rs  parser.rs  render.rs  style.rs
src/components/: contact_info.rs  education.rs  experience.rs  interest.rs  language.rs  mod.rs  personal_info.rs  project.rs  skill.rs  summary.rs
src/components/common/: external_link.rs  header_title.rs  highlight_text.rs  mod.rs  normal_text.rs  section_title.rs
src/components/compose/: icon_link.rs  icon_text.rs  mod.rs
src/model/: contact_info.rs  education.rs  interest.rs  mod.rs  project.rs  skill.rs
styles/: default.scss
