[package]
name = "Rusty-Web-CV"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[dev-dependencies]
trunk = "0.21" # Add Trunk as a dev dependency

# [lib]
# crate-type = ["cdylib", "rlib"]
