[package]
name = "Rusty-Web-Resume"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew_icons = { version = "0.8.0", features = [
  "BootstrapAt",
  "BootstrapEnvelope",
  "BootstrapGithub",
  "BootstrapGlobe2",
  "BootstrapLink45Deg",
  "BootstrapLinkedin",
  "BootstrapTelephone",
  "LucideArrowLeftCircle",
  "OcticonsLocation16",
] }

[dev-dependencies]
trunk = "0.21"  # Add Trunk as a dev dependency

# [lib]
# crate-type = ["cdylib", "rlib"]
